	PR rtl-optimization/55950 	* real.c (real_sqrt): Remove function. 	* real.h (real_sqrt): Remove prototype. 	* simplify-rtx.c (simplify_const_unary_operation): Do not fold 	SQRT using real_sqrt.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205223 138bc75d-0d04-0410-961f-82ee72b054a4